@@ -1,2 +1,2 @@
-SUBDIRS = config libnautilus-actions plugin nact po $(OPTIONAL_SUBDIR)
+SUBDIRS = libnautilus-actions plugin nact po $(OPTIONAL_SUBDIR)
 EXTRA_DIST=intltool-extract.in intltool-merge.in intltool-update.in
