@@ -1,17 +1,0 @@
-schemasdir = $(GCONF_SCHEMA_FILE_DIR)
-schemas_in_files = config_newaction.schemas.in
-schemas_DATA = $(schemas_in_files:.schemas.in=.schemas)
-@INTLTOOL_SCHEMAS_RULE@
-
-if GCONF_SCHEMAS_INSTALL
-install-data-local: install-schemas
-install-schemas:
-	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) \
-		$(GCONFTOOL) --makefile-install-rule $(schemas_DATA)
-else
-install-data-local:
-endif
-
-DISTCLEANFILES = $(schemas_DATA)
-
-EXTRA_DIST = $(schemas_in_files) 
