@@ -1,164 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<gconfschemafile>
-  <schemalist>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/label</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/label</applyto>
-      <owner>nautilus-actions</owner>
-      <type>string</type>
-      <locale name="C">
-        <default>Manage Actions</default>
-        <short>The label of the menu item</short>
-        <long>The label of the menu item that will appear in the Nautilus popup menu when the selection matches the appearance condition settings</long>
-      </locale>
-    </schema>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/tooltip</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/tooltip</applyto>
-      <owner>nautilus-actions</owner>
-      <type>string</type>
-      <locale name="C">
-        <default>Manage your actions using NACT, the configuration tool</default>
-        <short>The tooltip of the menu item</short>
-        <long>The tooltip of the menu item that will appear in the Nautilus statusbar when the user points the mouse to the Nautilus popup menu item.</long>
-      </locale>
-    </schema>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/icon</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/icon</applyto>
-      <owner>nautilus-actions</owner>
-      <type>string</type>
-      <locale name="C">
-        <short>The icon of the menu item</short>
-        <long>The icon of the menu item that will appear next to the label in the Nautilus popup menu when the selection matches the appearance conditions settings</long>
-      </locale>
-      <default>@DATADIR@/pixmaps/nautilus-actions-icon.png</default>
-    </schema>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/path</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/path</applyto>
-      <owner>nautilus-actions</owner>
-      <type>string</type>
-      <locale name="C">
-        <short>The path of the command</short>
-        <long>The path of the command to start when the user select the menu item in the Nautilus popup menu</long>
-      </locale>
-      <default>@BINDIR@/nautilus-actions-config</default>
-    </schema>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/parameters</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/parameters</applyto>
-      <owner>nautilus-actions</owner>
-      <type>string</type>
-      <locale name="C">
-        <short>The parameters of the command</short>
-        <long>The parameters of the command to start when the user selects the menu item in the Nautilus popup menu.
-
-The parameters can contain some special tokens which are replaced by Nautilus informations before starting the command :
-
-%d : base folder of the selected file(s)
-%f : the name of the selected file or the 1st one if many are selected
-%m : space-separated list of the basenames of the selected file(s)/folder(s)
-%M : space-separated list of the selected file(s)/folder(s), with their full paths
-%u : gnome-vfs URI
-%s : scheme of the gnome-vfs URI
-%h : hostname of the gnome-vfs URI
-%U : username of the gnome-vfs URI
-%% : a percent sign</long>
-      </locale>
-      <default></default>
-    </schema>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/basenames</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/basenames</applyto>
-      <owner>nautilus-actions</owner>
-      <type>list</type>
-      <list_type>string</list_type>
-      <locale name="C">
-        <short>The list of patterns to match the selected file(s)/folder(s)</short>
-        <long>A list of strings with joker '*' or '?' to match the selected file(s)/folder(s). Each selected items must match at least one of the patterns for the action to appear</long>
-      </locale>
-      <default>[*]</default>
-    </schema>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/isfile</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/isfile</applyto>
-      <owner>nautilus-actions</owner>
-      <type>bool</type>
-      <locale name="C">
-        <short>'true' if the selection must have files, 'false' otherwise</short>
-        <long>This setting is tied with the 'isdir' setting. Here are the valid combinations :
-
-- 'isfile' is 'true' and 'isdir' is 'false' : the selection must holds only files
-- 'isfile' is 'false' and 'isdir' is 'true' : the selection must holds only folders
-- 'isfile' is 'true' and 'isdir' is 'true' : the selection can holds both files and folders
-- 'isfile' is 'false' and 'isdir' is 'false' : invalid combination</long>
-      </locale>
-      <default>true</default>
-    </schema>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/isdir</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/isdir</applyto>
-      <owner>nautilus-actions</owner>
-      <type>bool</type>
-      <locale name="C">
-        <short>'true' if the selection must have folders, 'false' otherwise</short>
-        <long>This setting is tied with the 'isfile' setting. Here are the valid combinations :
-
-- 'isfile' is 'true' and 'isdir' is 'false' : the selection must holds only files
-- 'isfile' is 'false' and 'isdir' is 'true' : the selection must holds only folders
-- 'isfile' is 'true' and 'isdir' is 'true' : the selection can holds both files and folders
-- 'isfile' is 'false' and 'isdir' is 'false' : invalid combination</long>
-      </locale>
-      <default>true</default>
-    </schema>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/accept-multiple-files</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/accept-multiple-files</applyto>
-      <owner>nautilus-actions</owner>
-      <type>bool</type>
-      <locale name="C">
-        <short>'true' if the selection can have several items, 'false' otherwise</short>
-        <long>If you need one or more files or folders to be selected, set this key to 'true'. If you want just one file or folder, set 'false'</long>
-      </locale>
-      <default>true</default>
-    </schema>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/schemes</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/schemes</applyto>
-      <owner>nautilus-actions</owner>
-      <type>list</type>
-      <list_type>string</list_type>
-      <locale name="C">
-        <short>The list of GnomeVFS schemes where the selected files should be located</short>
-        <long>Defines the list of valid GnomeVFS schemes to be matched with the selected items. The GnomeVFS scheme is the protocol used to access the files. The keyword to use is the one used in the GnomeVFS URI.
-
-Example of GnomeVFS URI : 
-file:///tmp/foo.txt
-sftp:///root@test.example.net/tmp/foo.txt
-
-The most common schemes are :
-
-'file' : local files
-'sftp' : files accessed via SSH
-'ftp' : files accessed via FTP
-'smb' : files accessed via Samba (Windows share)
-'dav' : files accessed via WebDav
-
-All GnomeVFS schemes used by Nautilus can be used here.</long>
-      </locale>
-      <default>[file,sftp,ftp,dav,smb]</default>
-    </schema>
-    <schema>
-      <key>/schemas/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/version</key>
-      <applyto>/apps/nautilus-actions/configurations/33333333-3333-3333-3333-333333333333/version</applyto>
-      <owner>nautilus-actions</owner>
-      <type>string</type>
-      <locale name="C">
-        <short>The version of the configuration format</short>
-        <long>The version of the configuration format that will be used to manage backward compatibility</long>
-      </locale>
-      <default>1.0</default>
-    </schema>
-  </schemalist>
-</gconfschemafile>
